# RockmanFC_mods

./: LICENSE.txt  README.md
config/: .gitignore  CMakeLists.txt  README.md  TODO.txt  config.h.in
config/data/: icon.xcf.bz2  icon_16.raw  icon_16_raw.h
config/src/: CheckGroup.cpp  CheckGroup.hpp  ConfigGroup.cpp  ConfigGroup.hpp  ConfigIO.cpp  ConfigIO.hpp  ConfigWindow.cpp  ConfigWindow.hpp  RadioGroup.cpp  RadioGroup.hpp  main.cpp
patches/: README.md  README.txt  Rockman8FC_v3.13b_image_dir.bps  Rockman8FC_v3.13b_image_dir.ips  Rockman8FC_v3.13b_title.bps  Rockman8FC_v3.13b_title.ips
